# searchEverything

./: .gitignore  CI_CD_SUMMARY.md  CODE_OF_CONDUCT.md  COMMAND_NAME_UPDATE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_COMPLETE.md  DEVELOPMENT_SUMMARY.md  ENGLISH_SUPPORT_VERIFICATION.md  FINAL_TEST_REPORT.md  GOVERNANCE.md  P0_FIX_REPORT.md  P0_VERIFICATION_REPORT.md  README.md  README_en.md  RELEASE_NOTES.md  RELEASE_TEST_REPORT_v0.2.0.md  SKILL.md  config.example.yaml  qa-test-report-2026-03-12.md  review-report-issues.md  review-report-prs.md  review-report.md  skill_test_report.json  test_report.md  test_report.sh
.github/: BRANCH_PROTECTION.md  CI_CD.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  other.md
.github/workflows/: biweekly-review.yml  ci.yml  coverage.yml  install-tests.yml  pr-validation.yml  release.yml
docs/: CONTRIBUTOR_GUIDE_SUMMARY.md  OPENCLAW_INTEGRATION.md  README.md  api-reference.md  executive-summary.md  linux-features.md  technical-proposal.md
scripts/: auto-install.sh  auto-update.sh  install.sh  openclaw-install.sh  openclaw-uninstall.sh  openclaw-update.sh  review-issues.sh  review-prs.sh  searcheverything.service  setup-autostart.sh  test-skill.sh  uninstall.sh  verify-cicd.sh
skills/: openclaw-skill.yaml
src/: audit.rs  config.rs  context.rs  error.rs  main.rs  output.rs  skill_test.rs
src/commands/: audit.rs  cat.rs  copy.rs  delete.rs  index.rs  info.rs  mod.rs  move_file.rs  search.rs
src/file_index/: generic.rs  linux.rs  macos.rs  mod.rs  persistence.rs  trie.rs  windows.rs
src/tests/: benchmarks.rs  index_tests.rs  integration_tests.rs  linux_tests.rs  mod.rs  search_tests.rs  trie_tests.rs
tests/: .gitignore  MANUAL_CHECKLIST.md  README.md  REPORT_TEMPLATE.md  SUMMARY.md  TEST_CASES.md  TEST_PLAN.md  package.json
tests/.github/workflows/: ci.yml
tests/scripts/: run_tests.sh  test.js
